fixed file format error while moving from windows to unix (CRLF --> LF)

fixed mutiple copy execution ,separated domain from the socket.on('configue_webserver')

added folder name in webserver config

added search / fit addon for the terminal, full screen terminal is available now

fixed overlapping lines in terminal by matching the size of the pty (ssh2 shell) and xtermjs

added checkbox for https , and wordpress installation

added ai using ollama, deepseek-coder 6.7b  marked.js (markdown) usage:( OLLAMA_HOST=0.0.0.0 OLLAMA_ORIGINS=http://192.168.1.123:*  ollama serve) ,for port setting (OLLAMA_PORT=)

added custom style usage:( sass --watch custom.scss:custom.css)

added recent connections using mysql : to export database : (mysqldump -u usuario -p db_conn > db_conn.sql) , to import database first create db_conn, then (mysql -u root db_conn < /home/usuario/db_conn.sql)